--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
   <title>{{ page.title }}</title>
 </head>
 <body>
