--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,8 +5,10 @@
   <title>{{ page.title }}</title>
 </head>
 <body>
-  <h1>{{ page.title }}</h1>
-  <p><em>By {{ page.author }} on {{ page.date | date: "%B %d, %Y" }}</em></p>
-  <div>{{ content }}</div>
+  <div class="page-container">
+    <h1>{{ page.title }}</h1>
+    <p><em>By {{ page.author }} on {{ page.date | date: "%B %d, %Y" }}</em></p>
+    <div>{{ content }}</div>
+  </div>
 </body>
 </html>
