--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,8 +7,8 @@
 <body>
   <div class="page-container">
     <h1>{{ page.title }}</h1>
-    <p><em>By {{ page.author }} on {{ page.date | date: "%B %d, %Y" }}</em></p>
-    <div>{{ content }}</div>
+    <p><em>{{ page.author }} | {{ page.date | date: "%B %d, %Y" }}</em></p>
+    {{ content }}
   </div>
 </body>
 </html>
