--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,3 +22,13 @@ body {
         padding: 10px;
     }
 }
+
+.post-image {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.post-image img {
+    max-width: 100%;
+    height: auto;
+}
