--- a/_layouts/testimony.html
+++ b/_layouts/testimony.html
@@ -33,7 +33,10 @@
         />
         <meta name="twitter:image" content="{{ page.image | absolute_url }}" />
 
-        <!-- <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}"> -->
+        <link
+            rel="stylesheet"
+            href="{{ '/assets/css/style.css' | relative_url }}"
+        />
     </head>
     <body>
         <div class="page-container">
