--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <title>{{ page.title }}</title>
-        <!-- <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}" /> -->
+        <link
+            rel="stylesheet"
+            href="{{ '/assets/css/style.css' | relative_url }}"
+        />
         <!-- Other head elements -->
     </head>
     <body>
