--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,14 +2,19 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>{{ page.title }}</title>
         <link
             rel="stylesheet"
             href="{{ '/assets/css/style.css' | relative_url }}"
         />
-        <!-- Other head elements -->
     </head>
-    <body>
-        {{ content }}
+    <body class="{{ page.layout_class }}">
+        <div class="container">
+            <header class="header">
+                <h1 class="page-title">{{ page.title }}</h1>
+            </header>
+            <main>{{ content }}</main>
+        </div>
     </body>
 </html>
