--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body {
     color: #333;
     background-color: #fff;
     padding: 20px;
+    text-align: left;
 }
 
 .container {
@@ -20,30 +21,41 @@ body {
     padding: 20px;
 }
 
-/* Headings */
+/* Headings - same font size, differentiated by boldness */
 h1,
 h2,
 h3 {
-    font-weight: normal;
-    margin-bottom: 10px;
+    font-size: 1.5em;
+    margin-bottom: 5px;
+}
+
+h1 {
+    font-weight: 700;
+}
+h2 {
+    font-weight: 600;
+}
+h3 {
+    font-weight: 500;
 }
 
 /* Paragraphs */
 p {
-    margin-bottom: 20px;
-    text-align: justify;
+    margin-bottom: 15px;
+    text-align: left;
 }
 
 /* Header (Site Title) */
 .header {
-    text-align: center;
-    margin-bottom: 40px;
+    text-align: left;
+    margin-bottom: 30px;
 }
 
 /* Home Page Styles */
 .home .page-title {
-    font-size: 2.5em;
-    margin-bottom: 20px;
+    font-size: 1.5em;
+    margin-bottom: 15px;
+    font-weight: 700;
 }
 
 .post-list {
@@ -52,7 +64,7 @@ p {
 
 .post-card {
     border-bottom: 1px solid #ddd;
-    padding: 20px 0;
+    padding: 15px 0;
     display: flex;
     flex-wrap: wrap;
 }
@@ -60,7 +72,7 @@ p {
 .post-thumbnail {
     width: 100%;
     max-width: 200px;
-    margin-right: 20px;
+    margin-right: 15px;
 }
 
 .post-thumbnail img {
@@ -74,17 +86,18 @@ p {
 
 .post-title {
     font-size: 1.5em;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+    font-weight: 700;
 }
 
 .post-meta {
     font-size: 0.9em;
     color: #777;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .post-tags {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .post-tags span {
@@ -98,16 +111,29 @@ p {
 
 /* Post Page Styles */
 .post-page .post-title {
-    font-size: 2em;
-    margin-bottom: 10px;
+    font-size: 1.5em;
+    margin-bottom: 5px;
+    font-weight: 700;
 }
 
 .post-page .post-meta {
-    margin-bottom: 20px;
+    margin-bottom: 15px;
 }
 
 .post-page .post-body {
     line-height: 1.8;
+}
+
+/* Link Styling - bold by default */
+a {
+    color: #000;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+a:visited {
+    color: #666;
+    font-weight: bold;
 }
 
 /* Responsive Adjustments */
