--- a/_layouts/testimony.html
+++ b/_layouts/testimony.html
@@ -52,7 +52,7 @@
                 <h1 class="post-title">{{ page.title }}</h1>
                 <p class="post-meta">
                     <em
-                        >{{ page.author }} | {{ page.date | date: "%B %d, %Y"
+                        >{{ page.author }} | {{ page.date | date: "%B %d %Y"
                         }}</em
                     >
                 </p>
