--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+
 /* Basic Reset */
 * {
     margin: 0;
@@ -7,10 +9,10 @@
 
 /* Global Styles */
 body {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: Georgia, "Times New Roman", Times, serif;
     line-height: 1.6;
     color: #333;
-    background-color: #fff;
+    background-color: #f8f8f0;
     padding: 20px;
     text-align: left;
 }
@@ -21,10 +23,12 @@ body {
     padding: 20px;
 }
 
-/* Headings - same font size, differentiated by boldness */
+/* Headings - serif, italic for a retro look */
 h1,
 h2,
 h3 {
+    font-family: "Merriweather", serif;
+    font-style: italic;
     font-size: 1.5em;
     margin-bottom: 5px;
 }
@@ -41,20 +45,20 @@ h3 {
 
 /* Paragraphs */
 p {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     text-align: left;
 }
 
 /* Header (Site Title) */
 .header {
     text-align: left;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 /* Home Page Styles */
 .home .page-title {
     font-size: 1.5em;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     font-weight: 700;
 }
 
@@ -64,7 +68,7 @@ p {
 
 .post-card {
     border-bottom: 1px solid #ddd;
-    padding: 15px 0;
+    padding: 10px 0;
     display: flex;
     flex-wrap: wrap;
 }
@@ -72,7 +76,7 @@ p {
 .post-thumbnail {
     width: 100%;
     max-width: 200px;
-    margin-right: 15px;
+    margin-right: 10px;
 }
 
 .post-thumbnail img {
@@ -117,7 +121,7 @@ p {
 }
 
 .post-page .post-meta {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 .post-page .post-body {
