--- a/_layouts/testimony.html
+++ b/_layouts/testimony.html
@@ -51,10 +51,7 @@
             <header class="header">
                 <h1 class="post-title">{{ page.title }}</h1>
                 <p class="post-meta">
-                    <em
-                        >{{ page.author }} | {{ page.date | date: "%B %d %Y"
-                        }}</em
-                    >
+                    {{ page.author }} | {{ page.date | date: "%B %d %Y" }}
                 </p>
             </header>
             <main class="post-body">{{ content }}</main>
