--- a/_layouts/testimony.html
+++ b/_layouts/testimony.html
@@ -43,7 +43,7 @@
             {% if page.image %}
             <div class="post-image">
                 <img
-                    src="{{ page.image | relative_url }}"
+                    src="{{ page.thumbnail | relative_url }}"
                     alt="{{ page.title }}"
                 />
             </div>
