--- a/_layouts/testimony.html
+++ b/_layouts/testimony.html
@@ -40,7 +40,7 @@
     </head>
     <body class="post-page">
         <div class="container">
-            {% if page.image %}
+            {% if page.thumbnail %}
             <div class="post-image">
                 <img
                     src="{{ page.thumbnail | relative_url }}"
