add default thumbnail

--- a/_layouts/testimony.html
+++ b/_layouts/testimony.html
@@ -21,10 +21,17 @@
             property="og:description"
             content="{{ page.excerpt | strip_html | truncatewords: 30 }}"
         />
+        {% if page.thumbnail %}
         <meta
             property="og:image"
             content="{{ page.thumbnail | absolute_url }}"
         />
+        {% else %}
+        <meta
+            property="og:image"
+            content="/assets/images/default-thumbnail.jpg"
+        />
+        {% endif %}
 
         <!-- Twitter -->
         <meta name="twitter:card" content="summary_large_image" />
@@ -34,10 +41,17 @@
             name="twitter:description"
             content="{{ page.excerpt | strip_html | truncatewords: 30 }}"
         />
+        {% if page.thumbnail %}
         <meta
             name="twitter:image"
             content="{{ page.thumbnail | absolute_url }}"
         />
+        {% else %}
+        <meta
+            name="twitter:image"
+            content="/assets/images/default-thumbnail.jpg"
+        />
+        {% endif %}
 
         <link
             rel="stylesheet"
